tests/baselines/reference/emitArrowFunctionWhenUsingArguments17(alwaysstrict=true,target=es5).errors.txt
emitArrowFunctionWhenUsingArguments17.ts(2,11): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments17.ts(4,22): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
emitArrowFunctionWhenUsingArguments17.ts(6,9): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments17.ts (3 errors) ====
    function f() {
        var { arguments } = { arguments: "hello" };
              ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        if (Math.random()) {
            return () => arguments[0];
                         ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
        }
        var arguments = "world";
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }